--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "socketchess",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "nodemon": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
+    "chess.js": "^0.12.0",
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0"
+  }
 }
