--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "@chrisoakman/chessboardjs": "^1.0.0",
     "chess.js": "^0.12.0",
     "express": "^4.17.1",
-    "socket.io": "^4.2.0"
+    "seedrandom": "^3.0.5",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.3.2",
+    "workerpool": "^6.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
