--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "seedrandom": "^3.0.5",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.3.2",
-    "workerpool": "^6.2.1"
+    "workerpool": "^6.2.1",
+    "wasm-chess-algorithms": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
